# fastapi_blog

./: .gitignore  README.md  auth.py  config.py  database.py  image_utils.py  main.py  models.py  pyproject.toml  schemas.py
routers/: posts.py  users.py
static/css/: main.css
templates/: account.html  home.html  layout.html  login.html  post.html  register.html
