[project]
name = "fastapi-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "djlint>=1.36.4",
    "fastapi[standard]>=0.129.0",
    "jinja2>=3.1.6",
    "sqlalchemy>=2.0.47",
]

[tool.djlint]
profile = "jinja"
